styling on classes

--- a/assets/pages/weekly-subscription-landing/components/weeklyContentBlock.scss
+++ b/assets/pages/weekly-subscription-landing/components/weeklyContentBlock.scss
@@ -9,7 +9,7 @@
 .weekly-content-block--feature .component-left-margin-section__content {
   background-color: gu-colour(garnett-neutral-1);
   color: gu-colour(garnett-neutral-5);
-  .weekly-feature-list li {
+  .weekly-feature-list .weekly-feature-list__item {
     border-color: gu-colour(garnett-neutral-5);
   }
 }
