--- a/assets/pages/weekly-subscription-landing/components/weeklyFeatureList.scss
+++ b/assets/pages/weekly-subscription-landing/components/weeklyFeatureList.scss
@@ -9,7 +9,7 @@
   font-family: $gu-headline;
 }
 
-..weekly-feature-list__item {
+.weekly-feature-list__item {
   flex: 0 0 25%;
   box-sizing: border-box;
   padding: 0 ($gu-h-spacing / 2) ($gu-v-spacing*2);
