--- a/app/views/newContributions.scala.html
+++ b/app/views/newContributions.scala.html
@@ -4,7 +4,7 @@
 @import helper.CSRF
 @import com.gu.i18n.Currency.AUD
 @import admin.Settings
-@import com.gu.support.workers.model.AccessScope.SessionId
+@import com.gu.support.workers.model.AccountAccessScope.SessionId
 @(
   title: String,
   id: String,
