--- a/assets/pages/weekly-subscription-landing/weeklySubscriptionLanding.scss
+++ b/assets/pages/weekly-subscription-landing/weeklySubscriptionLanding.scss
@@ -15,3 +15,4 @@
 @import 'components/weeklyFeatureList';
 @import 'components/weeklyHero';
 @import 'components/weeklyCta';
+@import 'components/weeklyForm';
