--- a/assets/stylesheets/gu-sass/colours.scss
+++ b/assets/stylesheets/gu-sass/colours.scss
@@ -140,7 +140,7 @@ $gu-colours: (
   immersive-garnett-main-1: rgba(0, 0, 0, .65),
   analysis-garnett-underline: #ffbac8,
 
-  green-dark: #236925,
+  green-dark: #29a05f,
 );
 
 // Given the name of the colour this returns the hex value.
