--- a/assets/pages/weekly-subscription-landing/components/weeklyContentBlock.scss
+++ b/assets/pages/weekly-subscription-landing/components/weeklyContentBlock.scss
@@ -1,5 +1,7 @@
 .weekly-content-block .component-left-margin-section__content {
-  border-left: 1px solid gu-colour(garnett-neutral-4);
+  @include mq($from: tablet) {
+    border-left: 1px solid gu-colour(garnett-neutral-4);
+  }
 }
 
 .weekly-content-block--grey .component-left-margin-section__content {
