--- a/assets/pages/weekly-subscription-landing/components/weeklyForm.scss
+++ b/assets/pages/weekly-subscription-landing/components/weeklyForm.scss
@@ -1,7 +1,3 @@
-.weekly-form-wrap {
-  margin-bottom: $gu-v-spacing * 2;
-}
-
 .weekly-form {
   margin-bottom: $gu-v-spacing * 2;
   @include mq($from: tablet) {
@@ -55,4 +51,20 @@
 .weekly-form-label__offer {
   color: gu-colour(green-dark);
   font-weight: 600;
+}
+
+.weekly-form__info {
+  padding-top: $gu-v-spacing * 2;
+  padding-bottom: $gu-v-spacing * 2.5;
+  color: gu-colour(garnett-neutral-6);
+  font-family: $gu-text-sans-web;
+  font-size: 16px;
+  svg {
+    display: inline-block;
+    vertical-align: text-bottom;
+    margin-right: $gu-h-spacing / 4;
+    circle {
+      fill: gu-colour(garnett-neutral-6);
+    }
+  }
 }
