--- a/assets/pages/weekly-subscription-landing/components/weeklyForm.scss
+++ b/assets/pages/weekly-subscription-landing/components/weeklyForm.scss
@@ -2,6 +2,7 @@
   margin-bottom: $gu-v-spacing * 2;
   @include mq($from: tablet) {
     display: flex;
+    align-items: stretch;
   }
 }
 
@@ -11,7 +12,6 @@
   box-sizing: border-box;
   margin-bottom: $gu-v-spacing;
   @include mq($from: tablet) {
-    height: 100%;
     margin-bottom: 0;
   }
 }
