--- a/assets/pages/weekly-subscription-landing/weeklySubscriptionLanding.scss
+++ b/assets/pages/weekly-subscription-landing/weeklySubscriptionLanding.scss
@@ -16,3 +16,4 @@
 @import 'components/weeklyHero';
 @import 'components/weeklyCta';
 @import 'components/weeklyForm';
+@import 'components/weeklyFormLabel';
