--- a/assets/pages/weekly-subscription-landing/components/weeklyFormLabel.scss
+++ b/assets/pages/weekly-subscription-landing/components/weeklyFormLabel.scss
@@ -14,6 +14,12 @@
   display: block;
   height: 100%;
   cursor: pointer;
+  transition: .2s;
+  will-change: background-color box-shadow;
+}
+
+.weekly-form-label-wrap__input:hover + .weekly-form-label {
+  box-shadow: 0 0 0 2px rgba(gu-colour(garnett-neutral-4),.5);
 }
 
 .weekly-form-label-wrap__input:focus + .weekly-form-label {
