Redux on GW page (#1142)
* picker

* redux!

* redux

* bind form

* responsivity

* cancel text

* chevron

* tabbable form

* revert green

* niceties

* fix imports

--- a/assets/pages/weekly-subscription-landing/components/weeklyContentBlock.scss
+++ b/assets/pages/weekly-subscription-landing/components/weeklyContentBlock.scss
@@ -1,5 +1,7 @@
 .weekly-content-block .component-left-margin-section__content {
-  border-left: 1px solid gu-colour(garnett-neutral-4);
+  @include mq($from: tablet) {
+    border-left: 1px solid gu-colour(garnett-neutral-4);
+  }
 }
 
 .weekly-content-block--grey .component-left-margin-section__content {
@@ -25,8 +27,10 @@
 }
 
 .weekly-content-block {
-  .weekly-feature-list {
-    margin: 0 ($gu-h-spacing / 2 * -1);
+  .weekly-feature-list,
+  .weekly-form {
+    margin-left: ($gu-h-spacing / 2 * -1);
+    margin-right: ($gu-h-spacing / 2 * -1);
   }
   .weekly-text-block {
     margin-bottom: ($gu-v-spacing*2)
