--- a/assets/pages/weekly-subscription-landing/components/weeklyCta.scss
+++ b/assets/pages/weekly-subscription-landing/components/weeklyCta.scss
@@ -10,7 +10,10 @@
   border: none;
   border-radius: 600px;
   cursor: pointer;
-   &:hover {
+  transition: background-color .2s;
+  will-change: background-color;
+
+  &:hover {
     background-color: gu-colour(highlight-dark);
   }
 }
@@ -24,4 +27,8 @@
 .weekly-cta svg {
   height: $gu-v-spacing * 2;
   margin: $gu-v-spacing * -1 $gu-h-spacing * -.5 $gu-v-spacing * -1 $gu-h-spacing * .5;
+}
+
+.weekly-cta svg.svg-chevron {
+  height: $gu-v-spacing * 1.1;
 }
