--- a/assets/pages/weekly-subscription-landing/components/weeklyContentBlock.scss
+++ b/assets/pages/weekly-subscription-landing/components/weeklyContentBlock.scss
@@ -6,13 +6,17 @@
 
 .weekly-content-block--grey {
   background-color: gu-colour(garnett-neutral-3);
+  .component-left-margin-section__content {
+    border-left: 0;
+    margin-left: -1px;
+  }
 }
 
 .weekly-content-block--feature {
   background-color: gu-colour(header-dark);
   color: gu-colour(garnett-neutral-5);
   .component-left-margin-section__content {
-    border-color: gu-colour(garnett-neutral-5);
+    border-color: gu-colour(header-border);
   }
   .weekly-feature-list .weekly-feature-list__item {
     border-color: gu-colour(garnett-neutral-5);
