--- a/assets/pages/weekly-subscription-landing/components/weeklyHero.scss
+++ b/assets/pages/weekly-subscription-landing/components/weeklyHero.scss
@@ -1,10 +1,13 @@
 .weekly-hero {
-  background: gu-colour(garnett-neutral-3);
+  background: gu-colour(header-dark);
   overflow: hidden;
-  padding-top: 300px;
   .component-left-margin-section__content {
+    padding-top: 300px;
     @include mq($from: tablet) {
-      border-left: 1px solid gu-colour(garnett-neutral-4);
+      border-left: 1px solid gu-colour(header-border);
+      .component-heading-block {
+        margin-left: -1px;
+      }    
     }
   }
 }
@@ -12,6 +15,12 @@
 .weekly-hero-hanger {
   background: gu-colour(garnett-neutral-5);
   .component-left-margin-section__content {
+    @include mq($from: tablet) {
+      border-left: 1px solid gu-colour(garnett-neutral-4);
+      .weekly-hero-hanger__content {
+        margin-left: -1px;
+      }
+    }
     @include multiline-bottom-border;
   }
 }
