--- a/assets/stylesheets/gu-sass/colours.scss
+++ b/assets/stylesheets/gu-sass/colours.scss
@@ -86,7 +86,8 @@ $gu-colours: (
 	// Garnett
   nav-faded: #e9eff1,
   nav-dark: #bbcdd3,
-  header-dark: #052962,
+	header-dark: #052962,
+	header-border: #536b90,
 
   garnett-neutral-1: #121212,
   garnett-neutral-2: #999999,
