--- a/assets/pages/weekly-subscription-landing/components/weeklyFeatureList.scss
+++ b/assets/pages/weekly-subscription-landing/components/weeklyFeatureList.scss
@@ -21,8 +21,6 @@
     padding: 0 ($gu-h-spacing / 2) ($gu-v-spacing*2);
     margin: 0;
     border-top: 0;
-    &:not(:last-child) {
-      border-right: 1px solid gu-colour(garnett-neutral-4);
-    }
+    border-left: 1px solid gu-colour(garnett-neutral-4);
   }
 }
