--- a/assets/pages/weekly-subscription-landing/components/weeklyHero.scss
+++ b/assets/pages/weekly-subscription-landing/components/weeklyHero.scss
@@ -4,9 +4,40 @@
   .component-left-margin-section__content {
     @include mq($from: tablet) {
       border-left: 1px solid gu-colour(header-border);
+      position: relative;
       .component-heading-block {
         margin-left: -1px;
       }    
+    }
+  }
+  .svg-weekly-hero-circles {
+    position: absolute;
+    width: 300px;
+    left: -300px;
+    bottom: 0;
+  }
+  .component-heading-block {
+    z-index: 10;
+    position: relative;
+  }
+  .component-grid-image {
+    display: block;
+    width: 90%;
+    max-width: 500px;
+    margin: ($gu-v-spacing * 3) auto -25%;
+    z-index: 9;
+    @include mq($from: tablet) {
+      width: auto;
+      max-width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 5%;
+      right: -20%;
+      margin: 0;
+    }
+    @include mq($from: desktop) {
+      left: 500px;
+      right: auto;
     }
   }
 }
@@ -33,12 +64,17 @@
 
 .weekly-hero__headline {
   color: gu-colour(garnett-neutral-5);
-  font-family: $gu-headline;
-  font-size: 48px;
+  font-family: $gu-titlepiece;
   font-weight: bold;
   line-height: 1;
   display: block;
-  max-width: 430px;
-  margin-bottom: 240px;
+  max-width: 440px;
   padding: $gu-v-spacing/2  $gu-h-spacing/2;
+  font-size: 30px;
+  @include mq($from: phablet) {
+    font-size: 48px;
+  }
+  @include mq($from: tablet) {
+    margin-bottom: 240px;
+  }
 }
