--- a/assets/stylesheets/gu-sass/typography.scss
+++ b/assets/stylesheets/gu-sass/typography.scss
@@ -7,6 +7,7 @@
 
 // ----- Font Families ----- //
 
+$gu-titlepiece: 'GT Guardian Titlepiece', Georgia, serif !default;
 $gu-headline: 'Guardian Headline', Georgia, serif !default;
 $gu-text-egyptian-web: 'Guardian Text Egyptian Web', Georgia, serif !default;
 $gu-sans-web: 'Guardian Sans Web', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif !default;
