--- a/assets/stylesheets/gu-sass/webfonts.scss
+++ b/assets/stylesheets/gu-sass/webfonts.scss
@@ -80,6 +80,9 @@ $guss-webfonts: (
     'Guardian Titlepiece Web': (
         (weight: 'regular', style: 'normal'),
     ),
+    'GT Guardian Titlepiece': (
+        (weight: 'regular', style: 'normal'),
+    ),
     'Guardian Weekend Cond Web': (
         (weight: 'black', style: 'normal'),
     )
@@ -240,6 +243,9 @@ $guss-webfonts: (
             (weight: 'medium', style: 'normal', use-as: (weight: 'bold', style: 'normal')),
         ),
         'Guardian Sans Web': (
+            (weight: 'regular', style: 'normal'),
+        ),
+        'GT Guardian Titlepiece': (
             (weight: 'regular', style: 'normal'),
         ),
     )
