--- a/assets/pages/weekly-subscription-landing/components/weeklyHero.scss
+++ b/assets/pages/weekly-subscription-landing/components/weeklyHero.scss
@@ -1,5 +1,6 @@
 .weekly-hero {
   background: gu-colour(header-dark);
+  border-top: 1px solid gu-colour(header-border);
   overflow: hidden;
   .component-left-margin-section__content {
     @include mq($from: tablet) {
@@ -31,7 +32,7 @@
       max-width: 100%;
       height: 100%;
       position: absolute;
-      top: 5%;
+      top: 10%;
       right: -20%;
       margin: 0;
     }
