Tweaked the letter colour on the contributions page.

--- a/assets/stylesheets/gu-sass/gu-sass.scss
+++ b/assets/stylesheets/gu-sass/gu-sass.scss
@@ -61,7 +61,7 @@
       }
 
       .svg-roundel__g {
-        fill: gu-colour(garnett-neutral-1);
+        fill: gu-colour(header-dark);
       }
     }
 
