Added header tweaks class.

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -72,7 +72,7 @@
 
 	@styles
 </head>
-<body>
+<body class="header-tweaks">
 	<noscript>
     <div style="text-align: center;
                 font-size: 30px;
