--- a/assets/pages/weekly-subscription-landing/components/weeklyFormLabel.scss
+++ b/assets/pages/weekly-subscription-landing/components/weeklyFormLabel.scss
@@ -49,7 +49,7 @@
   width: $gu-v-spacing * 2.3;
   height: $gu-v-spacing * 2.3;
   border-radius: 100%;
-  background: gu-colour(news-garnett-highlight);
+  background: gu-colour(garnett-neutral-1);
   position: absolute;
   top: 0;
   bottom: 0;
@@ -60,6 +60,7 @@
   transition: .2s;
   svg {
     width: 75%;
+    fill: gu-colour(news-garnett-highlight);
   }
 }
 .weekly-form-label-wrap__input:hover + .weekly-form-label,
@@ -68,12 +69,17 @@
 }
 
 .weekly-form-label-wrap__input:checked + .weekly-form-label {
-  background: gu-colour(sport-garnett-media-main-1);
+  background: gu-colour(news-garnett-highlight);
+  border-color: rgba(0,0,0,.3);
+  color: gu-colour(garnett-neutral-1);
   .weekly-form-label__check {
     transform: translateY(0);
     opacity: 1;
   }
+  .weekly-form-label__offer {
+    color: inherit;
+  }
   &, .weekly-form-label__title {
-    border-color: gu-colour(sport-garnett-main-1);
+    border-color: rgba(0,0,0,.3)
   }
 }
