--- a/assets/pages/weekly-subscription-landing/weeklySubscriptionLanding.scss
+++ b/assets/pages/weekly-subscription-landing/weeklySubscriptionLanding.scss
@@ -11,11 +11,40 @@
 @import '~components/selectInput/selectInput';
 @import '~components/headingBlock/headingBlock';
 @import '~components/leftMarginSection/leftMarginSection';
+@import '~components/productPage/productPageHero/productPageHero';
 
 @import 'components/weeklyContentBlock';
 @import 'components/weeklyTextBlock';
 @import 'components/weeklyFeatureList';
-@import 'components/weeklyHero';
 @import 'components/weeklyCta';
 @import 'components/weeklyForm';
 @import 'components/weeklyFormLabel';
+
+.component-product-page-hero--weekly {
+  .svg-weekly-hero-circles {
+    position: absolute;
+    width: 300px;
+    left: -300px;
+    bottom: 0;
+  }
+  .component-grid-image {
+    display: block;
+    width: 90%;
+    max-width: 500px;
+    margin: ($gu-v-spacing * 3) auto -25%;
+    z-index: 9;
+    @include mq($from: tablet) {
+      width: auto;
+      max-width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 10%;
+      right: -20%;
+      margin: 0;
+    }
+    @include mq($from: desktop) {
+      left: 500px;
+      right: auto;
+    }
+  }
+}
