--- a/assets/components/productPage/productPageHero/productPageHero.scss
+++ b/assets/components/productPage/productPageHero/productPageHero.scss
@@ -40,7 +40,7 @@
 .component-product-page-hero__headline {
   color: gu-colour(garnett-neutral-5);
   font-family: $gu-titlepiece;
-  font-weight: bold;
+  font-weight: 400;
   line-height: 1;
   display: block;
   max-width: 440px;
