--- a/assets/components/productPage/productPageTextBlock/productPageTextBlock.scss
+++ b/assets/components/productPage/productPageTextBlock/productPageTextBlock.scss
@@ -1,4 +1,4 @@
-.weekly-text-block__heading {
+.component-product-page-text-block__heading {
   font-size: 24px;
   font-weight: bold;
   line-height: 1.16;
@@ -6,10 +6,10 @@
   margin-bottom: ($gu-v-spacing/2);
 }
 
-.weekly-text-block {
+.component-product-page-text-block {
   max-width: 480px;
 }
 
-.weekly-text-block a {
+.component-product-page-text-block a {
   color: inherit;
 }
