--- a/assets/components/productPage/productPageContentBlock/productPageContentBlock.scss
+++ b/assets/components/productPage/productPageContentBlock/productPageContentBlock.scss
@@ -1,10 +1,10 @@
-.weekly-content-block .component-left-margin-section__content {
+.component-product-page-content-block .component-left-margin-section__content {
   @include mq($from: tablet) {
     border-left: 1px solid gu-colour(garnett-neutral-4);
   }
 }
 
-.weekly-content-block--grey {
+.component-product-page-content-block--grey {
   background-color: gu-colour(garnett-neutral-3);
   .component-left-margin-section__content {
     border-left: 0;
@@ -12,7 +12,7 @@
   }
 }
 
-.weekly-content-block--feature {
+.component-product-page-content-block--feature {
   background-color: gu-colour(header-dark);
   color: gu-colour(garnett-neutral-5);
   .component-left-margin-section__content {
@@ -23,7 +23,7 @@
   }
 }
 
-.weekly-content-block--dark {
+.component-product-page-content-block--dark {
   background-color: gu-colour(garnett-neutral-7);
   color: gu-colour(garnett-neutral-5);
   .component-left-margin-section__content {
@@ -31,18 +31,18 @@
   }
 }
 
-.weekly-content-block__content {
+.component-product-page-content-block__content {
   max-width: 1180px;
   padding: ($gu-v-spacing/2) ($gu-h-spacing / 2) 0;
 }
 
-.weekly-content-block {
-  .weekly-feature-list,
-  .weekly-form {
-    margin-left: ($gu-h-spacing / 2 * -1);
-    margin-right: ($gu-h-spacing / 2 * -1);
-  }
-  .weekly-text-block {
+.component-product-page-content-block__outset {
+  margin-left: ($gu-h-spacing / 2 * -1);
+  margin-right: ($gu-h-spacing / 2 * -1);
+}
+
+.component-product-page-content-block {
+  .component-product-page-text-block {
     margin-bottom: ($gu-v-spacing*2)
   }
 }
