--- a/assets/pages/weekly-subscription-landing/weeklySubscriptionLanding.scss
+++ b/assets/pages/weekly-subscription-landing/weeklySubscriptionLanding.scss
@@ -12,9 +12,9 @@
 @import '~components/headingBlock/headingBlock';
 @import '~components/leftMarginSection/leftMarginSection';
 @import '~components/productPage/productPageHero/productPageHero';
+@import '~components/productPage/productPageContentBlock/productPageContentBlock';
+@import '~components/productPage/productPageTextBlock/productPageTextBlock';
 
-@import 'components/weeklyContentBlock';
-@import 'components/weeklyTextBlock';
 @import 'components/weeklyFeatureList';
 @import 'components/weeklyCta';
 @import 'components/weeklyForm';
