update hero colours

--- a/assets/components/productPage/productPageHero/productPageHero.scss
+++ b/assets/components/productPage/productPageHero/productPageHero.scss
@@ -1,10 +1,9 @@
 .component-product-page-hero {
-  background: gu-colour(header-dark);
-  border-top: 1px solid gu-colour(header-border);
+  background: gu-colour(garnett-neutral-3);
   overflow: hidden;
   .component-left-margin-section__content {
     @include mq($from: tablet) {
-      border-left: 1px solid gu-colour(header-border);
+      border-left: 1px solid gu-colour(garnett-neutral-4);
       position: relative;
       .component-heading-block {
         margin-left: -1px;
@@ -38,7 +37,7 @@
 }
 
 .component-product-page-hero__headline {
-  color: gu-colour(garnett-neutral-5);
+  color: gu-colour(garnett-neutral-1);
   font-family: $gu-titlepiece;
   font-weight: 400;
   line-height: 1;
