--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -35,7 +35,7 @@ body {
 /*= HEADER */
 
 header[role="banner"] {
-  background-color: gu-colour(nav-faded);
+  background-color: gu-colour(header-dark);
   border-bottom: 1px solid gu-colour(garnett-neutral-4);
   position: relative;
   z-index: 1;
@@ -45,11 +45,15 @@ header[role="banner"] {
   width: 60px;
   height: 60px;
   position: relative;
-}
 
-.glogo .svg-roundel {
-  width: 100%;
-  height: 100%;
+  .svg-roundel {
+    width: 100%;
+    height: 100%;
+  }
+
+  .svg-roundel__g {
+    fill: gu-colour(header-dark);
+  }
 }
 
 .countryGroups {
@@ -59,6 +63,10 @@ header[role="banner"] {
   padding: 0;
   width: 100%;
   cursor: pointer;
+}
+
+.countryGroups__label {
+  color: #fff;
 }
 
 // Safari doesn't respect styles applied to <summary> so we need this wrapper div
@@ -87,6 +95,7 @@ header[role="banner"] {
 .countryGroups .svg-chevron {
   width: 19px;
   height: 10px;
+  fill: #fff;
 }
 
 .countryGroups[open] .svg-chevron {
@@ -104,6 +113,7 @@ header[role="banner"] {
   width: 14px;
   height: 14px;
   fill: gu-colour(garnett-neutral-1);
+  fill: #fff;
 }
 
 .countryGroups summary {
@@ -246,7 +256,7 @@ header[role="banner"] {
 
 
   .glogo {
-    top: 10px;
+    top: 7px;
     right: 10px;
   }
 
@@ -304,7 +314,7 @@ header[role="banner"] {
   }
 
   .glogo {
-    top: $gu-v-spacing * 2;
+    top: 7px;
   }
 
   .gu-content__content {
