grey out disabled ctas

--- a/assets/pages/weekly-subscription-landing/components/weeklyCta.scss
+++ b/assets/pages/weekly-subscription-landing/components/weeklyCta.scss
@@ -19,6 +19,11 @@
     background-color: gu-colour(highlight-dark);
     outline: 0;
   }
+
+  &[disabled], &[data-disabled] {
+    opacity: .5;
+    pointer-events: none;
+  }
 }
 
 .weekly-cta__content,
