hide on disabled

--- a/assets/pages/weekly-subscription-landing/components/weeklyForm.scss
+++ b/assets/pages/weekly-subscription-landing/components/weeklyForm.scss
@@ -34,10 +34,18 @@
 
 .weekly-form__cta {
   @include mq($until: tablet) {
+    transition: .4s;
+    opacity: 1;
+    transform: translateY(0);
     position: sticky;
     bottom: 0;
     background: rgba(0,0,0,.75);
     margin: $gu-v-spacing * -1 $gu-h-spacing * -.5;
     padding: $gu-v-spacing $gu-h-spacing * .5;
+    &[data-disabled] {
+      opacity: 0;
+      transform: translateY(100%);
+      pointer-events: none;
+    }
   }
 }
