--- a/assets/pages/weekly-subscription-landing/components/weeklyFeatureList.scss
+++ b/assets/pages/weekly-subscription-landing/components/weeklyFeatureList.scss
@@ -1,4 +1,5 @@
 .weekly-feature-list {
+  color: gu-colour(nav-faded);
   @include mq($from: tablet) {
     display: flex;
   }
@@ -19,7 +20,7 @@
   border-top: 1px solid gu-colour(garnett-neutral-4);
   @include mq($from: tablet) {
     padding: 0 ($gu-h-spacing / 2) ($gu-v-spacing*2);
-    margin: 0;
+    margin: 0 0 0 -1px;
     border-top: 0;
     border-left: 1px solid gu-colour(garnett-neutral-4);
   }
