--- a/assets/pages/weekly-subscription-landing/weeklySubscriptionLanding.scss
+++ b/assets/pages/weekly-subscription-landing/weeklySubscriptionLanding.scss
@@ -24,6 +24,10 @@
   scroll-behavior: smooth;
 }
 
+.weekly-feature-list {
+  color: gu-colour(header-dark);
+}
+
 .component-product-page-hero--weekly {
   .svg-weekly-hero-circles {
     position: absolute;
