--- a/assets/components/productPage/productPageHero/productPageHero.scss
+++ b/assets/components/productPage/productPageHero/productPageHero.scss
@@ -37,7 +37,7 @@
 }
 
 .component-product-page-hero__headline {
-  color: gu-colour(garnett-neutral-1);
+  color: gu-colour(garnett-neutral-7);
   font-family: $gu-titlepiece;
   font-weight: 400;
   line-height: 1;
@@ -50,5 +50,8 @@
   }
   @include mq($from: tablet) {
     margin-bottom: 240px;
+  }
+  @include mq($from: desktop) {
+    font-size: 60px;
   }
 }
