--- a/assets/components/productPage/productPageTextBlock/productPageTextBlock.scss
+++ b/assets/components/productPage/productPageTextBlock/productPageTextBlock.scss
@@ -7,7 +7,13 @@
 }
 
 .component-product-page-text-block {
-  max-width: 480px;
+  max-width: 550px;
+  @include mq($from: tablet) {
+    width: 75%;
+  }
+  @include mq($from: desktop) {
+    width: 50%;
+  }
 }
 
 .component-product-page-text-block a {
