--- a/assets/pages/weekly-subscription-landing/components/weeklyFeatureList.scss
+++ b/assets/pages/weekly-subscription-landing/components/weeklyFeatureList.scss
@@ -18,7 +18,7 @@
   margin-left: $gu-h-spacing / 2;
   border-top: 1px solid gu-colour(garnett-neutral-4);
   @include mq($from: tablet) {
-    padding: 0 ($gu-h-spacing / 2) ($gu-v-spacing*2);
+    padding: 0 ($gu-h-spacing * 2) ($gu-v-spacing*2) ($gu-h-spacing / 2);
     margin: 0 0 0 -1px;
     border-top: 0;
     border-left: 1px solid gu-colour(garnett-neutral-4);
