--- a/assets/components/subscribeCta/subscribeCta.scss
+++ b/assets/components/subscribeCta/subscribeCta.scss
@@ -1,3 +1,6 @@
+@import '~stylesheets/gu-sass/colours';
+@import '~stylesheets/gu-sass/typography';
+
 .component-subscribe-cta {
   padding: 10px;
   margin-top: 10px;
