--- a/assets/components/countryGroupSwitcher/countryGroupSwitcher.scss
+++ b/assets/components/countryGroupSwitcher/countryGroupSwitcher.scss
@@ -33,6 +33,10 @@
       text-decoration: underline;
     }
 
+    option {
+      color: gu-colour(garnett-neutral-1);
+    }
+
     &::-ms-expand {
       background-color: transparent;
     }
