--- a/assets/components/productPage/productPageTextBlock/productPageTextBlock.scss
+++ b/assets/components/productPage/productPageTextBlock/productPageTextBlock.scss
@@ -1,8 +1,6 @@
 .component-product-page-text-block__heading {
-  font-size: 24px;
+  @include gu-font-headline-responsive;
   font-weight: bold;
-  line-height: 1.16;
-  font-family: $gu-headline;
   margin-bottom: ($gu-v-spacing/2);
 }
 
@@ -21,8 +19,6 @@
 }
 
 .component-product-page-text-block__large {
-  font-size: 24px;
+  @include gu-font-headline-responsive;
   font-weight: 200;
-  line-height: 1.16;
-  font-family: $gu-headline;
 }
