--- a/assets/components/productPage/productPageTextBlock/productPageTextBlock.scss
+++ b/assets/components/productPage/productPageTextBlock/productPageTextBlock.scss
@@ -6,6 +6,7 @@
 
 .component-product-page-text-block {
   max-width: 550px;
+  overflow-wrap: break-word;
   @include mq($from: tablet) {
     width: 75%;
   }
