--- a/assets/pages/weekly-subscription-landing/components/weeklyCta.scss
+++ b/assets/pages/weekly-subscription-landing/components/weeklyCta.scss
@@ -1,4 +1,4 @@
-.component-product-page-button {
+.weekly-cta {
   font-size: 16px;
   line-height: 1.2;
   display: inline-flex;
@@ -26,13 +26,13 @@
   }
 }
 
-.component-product-page-button__content,
-.component-product-page-button svg {
+.weekly-cta__content,
+.weekly-cta svg {
   flex: 0 0 auto;
   display: block;
 }
 
-.component-product-page-button svg {
+.weekly-cta svg {
   width: $gu-h-spacing * 1.5;
   margin: $gu-v-spacing * -1 $gu-h-spacing * -.5 $gu-v-spacing * -1 $gu-h-spacing * .5;
 }
