--- a/assets/pages/weekly-subscription-landing/components/weeklyFeatureList.scss
+++ b/assets/pages/weekly-subscription-landing/components/weeklyFeatureList.scss
@@ -1,15 +1,15 @@
-.component-product-page-features {
+.weekly-feature-list {
   @include mq($from: tablet) {
     display: flex;
   }
 }
 
-.component-product-page-features__title {
+.weekly-feature-list__title {
   @include gu-font-headline-responsive;
   font-weight: 200;
 }
 
-.component-product-page-features__item {
+.weekly-feature-list__item {
   flex: 0 0 25%;
   box-sizing: border-box;
   padding: ($gu-v-spacing / 6) ($gu-h-spacing/2) ($gu-v-spacing * 2) 0;
