--- a/assets/components/productPage/productPagePeriodForm/productPagePeriodFormLabel.scss
+++ b/assets/components/productPage/productPagePeriodForm/productPagePeriodFormLabel.scss
@@ -9,7 +9,7 @@
 }
 
 .component-product-page-period-form-label__box {
-  font-family: $gu-text-sans-web;
+  @include gu-font-sans-responsive;
   background: gu-colour(garnett-neutral-5);
   border: 1px solid gu-colour(garnett-neutral-2);
   color: gu-colour(garnett-neutral-1);
@@ -27,8 +27,8 @@
 }
 
 .component-product-page-period-form-label__title {
+  @include gu-font-sans-title-responsive(true);
   font-weight: 600;
-  font-size: 20px;
   position: relative;
   border-bottom: 1px solid gu-colour(garnett-neutral-2);
 }
