--- a/assets/components/productPage/productPageButton/productPageButton.scss
+++ b/assets/components/productPage/productPageButton/productPageButton.scss
@@ -1,10 +1,8 @@
 .component-product-page-button {
-  font-size: 16px;
-  line-height: 1.2;
+  @include gu-font-sans-responsive;
   display: inline-flex;
   align-items: center;
   text-decoration: none;
-  font-family: $gu-text-sans-web;
   font-weight: bold;
   padding: ($gu-v-spacing) $gu-h-spacing;
   background-color: gu-colour(news-garnett-highlight);
