--- a/assets/components/productPage/productPageFeatures/productPageFeatures.scss
+++ b/assets/components/productPage/productPageFeatures/productPageFeatures.scss
@@ -9,6 +9,10 @@
   font-weight: 200;
 }
 
+.component-product-page-features__copy {
+  @include gu-font-body-responsive;
+}
+
 .component-product-page-features__item {
   flex: 0 0 25%;
   box-sizing: border-box;
