--- a/assets/components/headingBlock/headingBlock.scss
+++ b/assets/components/headingBlock/headingBlock.scss
@@ -31,8 +31,7 @@
 }
 
 .component-heading-block__banner {
+  @include gu-font-body-responsive;
   border-top: 1px solid gu-colour(garnett-neutral-5);
   padding: ($gu-v-spacing / 1.5) ($gu-h-spacing / 2) $gu-v-spacing;
-  font-size: 17px;
-  line-height: 1;
 }
