--- a/assets/pages/paper-subscription-landing/paperSubscriptionLandingPage.scss
+++ b/assets/pages/paper-subscription-landing/paperSubscriptionLandingPage.scss
@@ -20,3 +20,7 @@
 :root {
   scroll-behavior: smooth;
 }
+
+.component-product-page-hero--paper .component-left-margin-section__content {
+  padding-top: 20em;
+}
